--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -525,9 +525,9 @@ h6 {
 }
 
 .container {
-    max-width: 1120px;
+    max-width: 1220px;
     margin: 0 auto;
-    padding: 0 2vw;
+    padding: 0 4vw;
 }
 
 .content {
@@ -662,16 +662,17 @@ h6 {
 /* ---------------------------------------------------------- */
 
 .site-head {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color: #fff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #222;
     background: var(--color-base);
+    box-shadow: inset 0 -1px 0 0 #fff, 0 1px 5px rgba(0,0,0,.1);
 }
 
 .site-nav-item {
     display: inline-block;
     padding: 5px 10px;
-    color: #fff;
+    color: #222;
     opacity: 0.7;
 }
 
